# Captain-Book

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
client/: .env  .gitignore  README.md  package.json
client/public/: index.html
client/src/: App.css  App.tsx  index.css  index.tsx
client/src/BookImageDisplay/: BookImageDisplay.tsx
client/src/Navbar/: Navbar.css  Navbar.tsx
client/src/SearchBar/: SearchBar.tsx
client/src/api/: api.ts  config.ts  utils.ts
client/src/auth/: AuthContext.tsx
client/src/common/LoadingContainer/: LoadingContainer.tsx
client/src/components/: App.css  App.tsx  book.ts  books-list.css  books-list.tsx  header.css  header.tsx  loading.tsx  main.tsx
client/src/components/Book/: Book.css  Book.tsx
client/src/components/BookDisplay/: BookDisplay.css  BookDisplay.tsx
client/src/components/BookImageDisplay/: BookImageDisplay.css  (+1 more)
client/src/firebase/: firebase.ts
client/src/hooks/: useAsyncAction.tsx  useAuth.ts  useLibrary.ts  usePersistentState.ts  useSearch.ts  useUserData.tsx
client/src/types/: Book.ts  LibgenSearch.ts  User.ts
client/src/utils/: BookFilter.ts  SDate.ts
client2/: README.md  package.json
client2/public/: index.html  manifest.json
client2/src/: Book.ts  index.css
client2/src/components/: App.css  App.tsx
client2/src/types/: Book.ts  LibgenSearch.ts
nginx/: api.captainbook.conf  nouvelle.conf
react-bookstore/src/: Main.js
scripts/: copy-nginx.sh  reset-db.sh  update-deployed.sh
server/: .gitignore  settings.gradle.kts
server/app/: book  build.gradle.kts
src/: main.rs
(+76 files in other folders)
