[package]
name = "libgen"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/*"
]

[dependencies]
libgen-rs = { path = "crates/libgen-rs" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.14", features = ["json", "stream"] }
anyhow = "1.0"
rocket = { git = "https://github.com/SergioBenitez/Rocket", features = ["json"] }
