[package]
name = "libgen"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/*"
]

[dependencies]
libgen-rs = { path = "crates/libgen-rs" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.14", features = ["json", "stream"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
axum = "0.6.7"
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["cors"] }
http = "0.2.9"
axum-macros = "0.3.4"
futures = "0.3"
